--- a/currency/nfpm.yaml
+++ b/currency/nfpm.yaml
@@ -16,6 +16,14 @@ contents:
   dst: /lib/systemd/system/odigos-demo-currency.service
 - src: ./dist/app
   dst: /opt/odigos-demo-currency
+- src: distribution/php-fpm.conf
+  dst: /etc/odigos-demo-currency/php-fpm.conf
+- src: distribution/nginx.conf
+  dst: /etc/nginx/sites-available/odigos-demo-currency.conf
+- src: distribution/php-fpm-start
+  dst: /usr/lib/odigos-demo-currency/php-fpm-start
+- src: distribution/disable-www.conf
+  dst: /etc/odigos-demo-currency/disable-www.conf
 scripts:
   preinstall: ./distribution/preinstall.sh
   postinstall: ./distribution/postinstall.sh
@@ -24,11 +32,36 @@ overrides:
   rpm:
     depends:
     - php-cli
+    - php-fpm
+    - nginx
     contents:
     - src: distribution/systemd.service
       dst: /lib/systemd/system/odigos-demo-currency.service
     - src: ./dist/app
       dst: /opt/odigos-demo-currency
+    - src: distribution/php-fpm.conf
+      dst: /etc/odigos-demo-currency/php-fpm.conf
+    - src: distribution/nginx.conf
+      dst: /etc/nginx/sites-available/odigos-demo-currency.conf
+    - src: distribution/php-fpm-start
+      dst: /usr/lib/odigos-demo-currency/php-fpm-start
+    - src: distribution/disable-www.conf
+      dst: /etc/odigos-demo-currency/disable-www.conf
   deb:
     depends:
-    - php-cli (>= 8.2)
+    - php-cli (>= 8.3)
+    - php8.3-fpm
+    - nginx
+    contents:
+    - src: distribution/systemd.service
+      dst: /lib/systemd/system/odigos-demo-currency.service
+    - src: ./dist/app
+      dst: /opt/odigos-demo-currency
+    - src: distribution/php-fpm.conf
+      dst: /etc/odigos-demo-currency/php-fpm.conf
+    - src: distribution/nginx.conf
+      dst: /etc/nginx/sites-available/odigos-demo-currency.conf
+    - src: distribution/php-fpm-start
+      dst: /usr/lib/odigos-demo-currency/php-fpm-start
+    - src: distribution/disable-www.conf
+      dst: /etc/odigos-demo-currency/disable-www.conf
