--- a/currency/distribution/systemd.service
+++ b/currency/distribution/systemd.service
@@ -1,20 +1,19 @@
 [Unit]
-Description=Odigos Demo Currency Service
+Description=Odigos Demo Currency (PHP-FPM app)
+Documentation=https://odigos.io
 After=network.target
 
 [Service]
 Type=simple
-User=odigos
-Group=odigos
+# Ensure /run/php exists so PHP-FPM can create the socket (nginx connects to it)
+RuntimeDirectory=php
+RuntimeDirectoryMode=0755
 WorkingDirectory=/opt/odigos-demo-currency
-; PHP built-in server: HTTP on port 9000 (no nginx, no PHP-FPM)
-ExecStart=/usr/bin/php -S 0.0.0.0:9000 -t /opt/odigos-demo-currency /opt/odigos-demo-currency/index.php
+# Start the currency demo app via PHP-FPM (pool: odigos-demo-currency)
+ExecStart=/usr/lib/odigos-demo-currency/php-fpm-start
 KillMode=mixed
 Restart=on-failure
 RestartSec=1
-RestartSteps=5
-RestartMaxDelaySec=60
-Environment="PORT=9000"
 Environment="GEOLOCATION_SERVICE_HOST=localhost:8086"
 
 [Install]
