Now currency works correctly

--- a/currency/distribution/nginx.conf
+++ b/currency/distribution/nginx.conf
@@ -1,19 +1,19 @@
+# Matches deployment/deployment.yaml ConfigMap (currency-nginx-config): all requests to index.php.
+# Linux: socket + /opt path; K8s: 127.0.0.1:9000 + /app.
 server {
-    listen 8085 default_server;              # becomes the chosen vhost
+    listen 8085 default_server;
     server_name _;
 
+    # Linux package: app on disk
     root /opt/odigos-demo-currency;
     index index.php;
 
-    access_log  /var/log/nginx/odigos-demo-currency.access.log;
-    error_log   /var/log/nginx/odigos-demo-currency.error.log;
+    access_log syslog:server=unix:/dev/log,tag=odigos_demo_currency_nginx combined;
+    error_log  syslog:server=unix:/dev/log,tag=odigos_demo_currency_nginx;
 
     location / {
-        try_files $uri $uri/ /index.php?$query_string;
-    }
-
-    location ~ \.php$ {
-        include snippets/fastcgi-php.conf;
+        include fastcgi_params;
         fastcgi_pass unix:/run/php/odigos-demo-currency.sock;
+        fastcgi_param SCRIPT_FILENAME /opt/odigos-demo-currency/index.php;
     }
 }
