--- a/currency/distribution/php-fpm.conf
+++ b/currency/distribution/php-fpm.conf
@@ -1,12 +1,21 @@
+; Master process: log to stderr so systemd/journalctl captures it (worker output is sent here via catch_workers_output)
+[global]
+error_log = /proc/self/fd/2
+
 [odigos-demo-currency]
 user  = www-data
 group = www-data
+
+; Let workers inherit env from the master; also set default so workers always get it
+clear_env = no
+env[GEOLOCATION_SERVICE_HOST] = localhost:8086
 
 listen        = /run/php/odigos-demo-currency.sock
 listen.owner  = www-data
 listen.group  = www-data
 listen.mode   = 0660
 
+; Send worker stdout/stderr to master error_log (stderr) so it appears in journalctl
 catch_workers_output        = yes
 php_admin_flag[log_errors]  = On
 php_admin_value[error_log]  = /proc/self/fd/2
