--- a/.github/workflows/release.yml
+++ b/.github/workflows/release.yml
@@ -115,7 +115,7 @@ jobs:
       - name: Build demo meta-package
         working-directory: demo
         run: |
-          make package-all TAG="${{ github.ref_name }}"
+          make -j package-all TAG="${{ github.ref_name }}"
 
       - name: Upload demo Linux packages to Artifact Registry
         uses: odigos-io/ci-core/upload-linux-packages@v1.0.5
