--- a/currency/distribution/php-fpm.conf
+++ b/currency/distribution/php-fpm.conf
@@ -1,6 +1,6 @@
-; Master process: log to stderr so systemd/journalctl captures it (worker output is sent here via catch_workers_output)
+; Master process: log via syslog so systemd/journalctl captures it on all distros (e.g. RHEL fails on /proc/self/fd/2)
 [global]
-error_log = /proc/self/fd/2
+error_log = syslog
 
 [odigos-demo-currency]
 user  = www-data
@@ -15,10 +15,10 @@ listen.owner  = www-data
 listen.group  = www-data
 listen.mode   = 0660
 
-; Send worker stdout/stderr to master error_log (stderr) so it appears in journalctl
+; Send worker stdout/stderr to master error_log (syslog) so it appears in journalctl
 catch_workers_output        = yes
 php_admin_flag[log_errors]  = On
-php_admin_value[error_log]  = /proc/self/fd/2
+php_admin_value[error_log]  = syslog
 
 pm              = dynamic
 pm.max_children = 5
