--- a/pricing/nfpm.yaml
+++ b/pricing/nfpm.yaml
@@ -11,7 +11,7 @@ description: |
 vendor: Odigos
 homepage: https://odigos.io
 depends:
-- dotnet-runtime-8.0
+- aspnetcore-runtime-8.0
 contents:
 - src: distribution/systemd.service
   dst: /lib/systemd/system/odigos-demo-pricing.service
