--- a/geolocation/Dockerfile
+++ b/geolocation/Dockerfile
@@ -31,6 +31,19 @@ COPY . .
 RUN rm -rf /rails/deployment /rails/distribution /rails/nfpm.yaml /rails/Makefile /rails/docker-bake.hcl /rails/README.md /rails/bin 2>/dev/null || true
 RUN chmod +x /rails/binaries/*
 
+# --- Bundle for native packages: Ruby 3.3, built on Bullseye (glibc 2.31) so .so run on RHEL 9 (2.34) and Ubuntu (2.35+) ---
+FROM docker.io/library/ruby:3.3-slim-bullseye AS bundle-for-package
+WORKDIR /rails
+RUN apt-get update -qq && \
+    apt-get install --no-install-recommends -y build-essential libyaml-dev pkg-config && \
+    rm -rf /var/lib/apt/lists /var/cache/apt/archives
+ENV BUNDLE_WITHOUT=development:test \
+    BUNDLE_DEPLOYMENT=1 \
+    BUNDLE_PATH=/rails/vendor/bundle
+COPY Gemfile Gemfile.lock ./
+RUN bundle install && \
+    rm -rf /rails/vendor/bundle/ruby/*/cache /rails/vendor/bundle/ruby/*/bundler/gems/*/.git
+
 # --- Build nfpm binary (for package stage) ---
 FROM golang:1.22-alpine AS nfpm-build
 RUN go install github.com/goreleaser/nfpm/v2/cmd/nfpm@v2.34.0
@@ -53,8 +66,9 @@ COPY distribution ./distribution
 COPY nfpm.yaml ./
 RUN mkdir -p dist/app /packages
 COPY --from=build /rails dist/app/
-# Don't ship vendor/bundle (built for Docker Ruby 3.4); postinstall runs bundle install for host Ruby
+# Same Ruby 3.3 vendor/bundle in both .rpm and .deb; no ruby-devel/libyaml-devel on RHEL or Ubuntu
 RUN rm -rf dist/app/vendor/bundle
+COPY --from=bundle-for-package /rails/vendor/bundle dist/app/vendor/bundle
 # Persist Bundler "without development test" so runtime does not require dev/test gems
 RUN mkdir -p dist/app/.bundle && printf '---\nBUNDLE_WITHOUT: "development:test"\nBUNDLE_DEPLOYMENT: "true"\nBUNDLE_PATH: "vendor/bundle"\n' > dist/app/.bundle/config
 ARG TARGETARCH
