--- a/geolocation/nfpm.yaml
+++ b/geolocation/nfpm.yaml
@@ -1,4 +1,5 @@
 name: odigos-demo-geolocation
+# Same vendored Ruby 3.3 bundle in .rpm (RHEL) and .deb (Ubuntu); no dev packages on target
 # arch/version set by Docker build args (TARGETARCH, VERSION) in package stage
 arch: ${TARGETARCH}
 platform: linux
@@ -21,8 +22,9 @@ scripts:
   preremove: ./distribution/preremove.sh
 overrides:
   rpm:
+    # RHEL: vendored bundle; need only ruby >= 3.3 and rubygem-bundler (e.g. ruby:3.3 module)
     depends:
-    - ruby >= 3.2.0
+    - ruby >= 3.3.0
     - rubygem-bundler
     contents:
     - src: distribution/systemd.service
@@ -30,7 +32,7 @@ overrides:
     - src: ./dist/app
       dst: /opt/odigos-demo-geolocation
   deb:
+    # Ubuntu: vendored bundle; need only ruby >= 3.3 and bundler (e.g. ruby3.3 from distro or deadsnakes)
     depends:
-    - ruby (>= 3.2.0)
+    - ruby (>= 3.3.0)
     - bundler
-    - libyaml-dev
