--- a/currency/nfpm.yaml
+++ b/currency/nfpm.yaml
@@ -1,5 +1,4 @@
 name: odigos-demo-currency
-# arch/version set by Docker build args (TARGETARCH, VERSION) in package stage
 arch: ${TARGETARCH}
 platform: linux
 version: ${VERSION}
@@ -30,9 +29,10 @@ scripts:
 overrides:
   rpm:
     depends:
-    - php-cli >= 8.3
-    - php-fpm >= 8.3
+    - php-cli
+    - php-fpm
     - nginx
+    - policycoreutils-python3-utils
     contents:
     - src: distribution/systemd.service.rpm
       dst: /lib/systemd/system/odigos-demo-currency.service
