--- a/geolocation/distribution/systemd.service
+++ b/geolocation/distribution/systemd.service
@@ -7,11 +7,10 @@ Type=simple
 User=odigos
 Group=odigos
 WorkingDirectory=/opt/odigos-demo-geolocation
-; Rails
+Environment="HOME=/opt/odigos-demo-geolocation/.home"
 Environment="RAILS_ENV=production"
 Environment="RAILS_MASTER_KEY=df0300c20246e24d331787f6540a72fa"
 Environment="PORT=8086"
-; Bundler deployment (use app vendor/bundle only; GEM_HOME/GEM_PATH so app's Bundler 2.6 is used, not system 2.4)
 Environment="GEM_HOME=/opt/odigos-demo-geolocation/vendor/bundle"
 Environment="GEM_PATH=/opt/odigos-demo-geolocation/vendor/bundle"
 Environment="BUNDLE_GEMFILE=/opt/odigos-demo-geolocation/Gemfile"
@@ -19,7 +18,6 @@ Environment="BUNDLE_PATH=/opt/odigos-demo-geolocation/vendor/bundle"
 Environment="BUNDLE_WITHOUT=development:test"
 Environment="BUNDLE_DEPLOYMENT=1"
 Environment="BUNDLE_DISABLE_SHARED_GEMS=1"
-; Use bundle exec so the app uses vendor/bundle (built in package), not system gems
 ExecStart=/usr/bin/env bash -c 'cd /opt/odigos-demo-geolocation && binaries/bundle exec binaries/rails db:prepare && exec binaries/bundle exec binaries/rails server -p ${PORT} -b 0.0.0.0'
 KillMode=mixed
 Restart=on-failure
